--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Navbar -->
     <div class="navbar">
-      <div class="container">
+      <div class="container flex">
         <h1 class="logo">Mokup Web</h1>
         <nav>
           <ul>
